--- a/package.json
+++ b/package.json
@@ -6,18 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:generate": "prisma generate deploy",
+    "prisma:migrate": "prisma migrate dev --preview-feature --name",
+    "db:setup": "docker volume create mysql-volume",
+    "db:start": "docker run --rm --name local-mysql-server --volume mysql-volume:/var/lib/mysql -p 3306:3306 --env-file=./.env -d mysql:latest",
+    "db:connect": "mysql -h 127.0.0.1 -u example -p",
+    "db:stop": "docker stop local-mysql-server",
+    "db:clean": "docker volume rm -f mysql-volume"
   },
   "dependencies": {
+    "@prisma/client": "3.3.0",
     "next": "12.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "recoil": "^0.4.1",
+    "styled-jsx": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
     "eslint": "7",
     "eslint-config-next": "12.0.1",
+    "prisma": "3.3.0",
     "typescript": "4.4.4"
+  },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
   }
 }
