--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@prisma/client": "3.3.0",
+    "isomorphic-fetch": "^3.0.0",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -24,6 +25,7 @@
     "styled-jsx": "^4.0.1"
   },
   "devDependencies": {
+    "@types/isomorphic-fetch": "^0.0.35",
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
     "eslint": "7",
